--- a/src/main/resources/static/web/password.html
+++ b/src/main/resources/static/web/password.html
@@ -251,5 +251,25 @@
 		</footer>
 		<!--页脚结束-->
 	</body>
-
+	<script type="text/javascript">
+		$("#btn-change-password").click(function() {
+			$.ajax({
+				url: "/users/change_password",
+				type: "POST",
+				data: $("#form-change-password").serialize(),
+				dataType: "json",
+				success: function(json) {
+					if (json.state == 200) {
+						alert("修改成功！");
+					} else {
+						alert("修改失败！" + json.message);
+					}
+				},
+				error: function (xhr) {
+					alert("您的登录信息已经过期，请重新登录！HTTP响应码：" + xhr.status);
+					location.href = "login.html";
+				}
+			})
+		})
+	</script>
 </html>
