解决了上传图片功能，修改前面的一些bug

--- a/src/main/resources/static/web/login.html
+++ b/src/main/resources/static/web/login.html
@@ -13,6 +13,7 @@
     <link href="../bootstrap3/css/bootstrap.css" rel="stylesheet" type="text/css">
     <script src="../bootstrap3/jquery-1.9.1.min.js"></script>
     <script src="../bootstrap3/js/bootstrap.js"></script>
+    <script src="../bootstrap3/js/jquery.cookie.js" type="text/javascript" charset="utf-8"></script>
     <!-- 字体图标 -->
     <link rel="stylesheet" href="../bootstrap3/font-awesome-4.7.0/css/font-awesome.css"/>
     <link rel="stylesheet" type="text/css" href="../css/top.css"/>
@@ -144,7 +145,6 @@
     </div>
 </footer>
 <!--页脚结束-->
-</body>
 <script type="text/javascript">
     $("#btn-login").click(function () {
         $.ajax({
@@ -155,6 +155,8 @@
             dataType: "json",
             success: function (json) {
                 if (json.state == 200) {
+                    $.cookie("avatar", json.data.avatar, {expires: 7});
+                    console.log("avatar:"+$.cookie("avatar"));
                     alert("登录成功！");
                     location.href = "index.html";
                 } else {
@@ -164,4 +166,6 @@
         });
     });
 </script>
+</body>
+
 </html>
