--- a/src/main/resources/static/web/password.html
+++ b/src/main/resources/static/web/password.html
@@ -264,6 +264,11 @@
 					} else {
 						alert("修改失败！" + json.message);
 					}
+					document.getElementsByName("oldPassword").values("");
+					document.getElementsByName("newPassword").values("");
+
+
+
 				},
 				error: function (xhr) {
 					alert("您的登录信息已经过期，请重新登录！HTTP响应码：" + xhr.status);
