--- a/src/main/resources/static/web/upload.html
+++ b/src/main/resources/static/web/upload.html
@@ -13,6 +13,7 @@
     <link href="../bootstrap3/css/bootstrap.css" rel="stylesheet" type="text/css">
     <script src="../bootstrap3/jquery-1.9.1.min.js"></script>
     <script src="../bootstrap3/js/bootstrap.js"></script>
+    <script src="../bootstrap3/js/jquery.cookie.js" type="text/javascript" charset="utf-8"></script>
     <!-- 字体图标 -->
     <link rel="stylesheet" href="../bootstrap3/font-awesome-4.7.0/css/font-awesome.css"/>
     <link rel="stylesheet" type="text/css" href="../css/layout.css"/>
@@ -141,16 +142,16 @@
                     <div class="form-group">
                         <label class="col-md-2 control-label">选择头像:</label>
                         <div class="col-md-5">
-                            <img id="img-avatar" src="../images/index/user.jpg" class="img-responsive"/>
+                            <img id="img-avatar" src="/upload/02b81dbd-4866-430b-b93f-b33ee07aff0f.jpg" class="img-responsive"/>
                         </div>
                         <div class="clearfix"></div>
                         <div class="col-md-offset-2 col-md-4">
-                            <input type="file" name="file">
+                            <input type="file" id="file" name="file">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
-                            <input type="submit" id="btn-change-avatar" class="btn btn-primary" value="上传"/>
+                            <input type="button" id="btn-change-avatar" class="btn btn-primary" value="上传"/>
                         </div>
                     </div>
                 </form>
@@ -244,33 +245,52 @@
     </div>
 </footer>
 <!--页脚结束-->
-</body>
-
-
 <script type="text/javascript">
+
+    /**
+     * form传送信息的两种方式，一个为将按钮类型设为submit，那么需要再form标签中设置action，需要设置enctype,另一种使用button
+     的click方法使用ajax传送，获取项目根目录路径的方法：System.get("user.dir")，使用spingmvc封装的transfer方法，传送图片
+     以及设置session，以及拦截器，了解另一个拦截器sourceincrepter，用于远程获取文件，映射到本地路径，
+     更改了前面的一些bug，还是需要边做边测试，
+     **/
     $("#btn-change-avatar").click(function () {
+        console.log("sdifjsdijfoi")
+        var formData=new FormData();
+        var files=$("#file").get(0).files[0];
+        formData.append("file",files)
+
         $.ajax({
-            url: "/users/change_info",
-            type: "JSON",
+            url: "/users/change_avatar",
+            type: "POST",
             contentType: false,
             processData: false,
-            data: new FormData($("#form-change-avatar")[0]),
+            data: formData,
             success: function (res) {
+                console.log("1561");
+                console.log(res);
                 if (res.state == 200) {
                     $("#img-avatar").attr("src", res.data)
                 } else {
                     alert("修改失败" + res.message);
                 }
+                $.cookie("avarar", res.data, {expires: 7})
+
             },
+
             error: function (xhr) {
                 alert("您的登录信息已经过期，请重新登录！HTTP响应码：" + xhr.status);
                 location.href = "login.html";
             }
         });
     });
+    $(document).ready(function () {
+        console.log("cookie中avatar:" + $.cookie("avatar"));
+        $("#img-avatar").attr("src", $.cookie("avatar"));
+    })
 
 
 </script>
+</body>
 
 
 </html>
